--- a/3-about.html
+++ b/3-about.html
@@ -15,8 +15,8 @@ header-img: "img/slyzmun_header_img.png"
 <div class="zh post-container">
 
     <!--copied from markdown -->
-    <blockquote><p>冰冻三尺 非一日之寒<br>
-    积土成山 非斯须之作</p></blockquote>
+    <blockquote><p>从胜利出发，<br>
+    与世界对话。</p></blockquote>
 
     <p>Hi，这里是<strong>胜利一中模拟联合国协会</strong>，隶属于东营市胜利第一中学社团阵地，秉持着对多元文化交流与国际事务探讨的热忱而成立。</p>
 
