--- a/1-resources.html
+++ b/1-resources.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "内部资料"
-description: "从胜利出发，与世界对话"
+description: 胜利一中模拟联合国协会
 header-img: "img/slyzmun_header_img.png"
 ---
 
