--- a/3-about.html
+++ b/3-about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "关于我们"
-description: 胜利一中模拟联合国协会
+description: "胜利一中模拟联合国协会"
 header-img: "img/slyzmun_header_img.png"
 ---
 
