--- a/2-tags.html
+++ b/2-tags.html
@@ -2,7 +2,7 @@
 title: 最新动态
 layout: default
 description: "胜利一中模拟联合国协会"
-header-img: "img/tag-bg.jpg"
+header-img: "img/slyzmun_header_img.png"
 ---
 
 <!-- Page Header -->
