--- a/1-resources.html
+++ b/1-resources.html
@@ -2,7 +2,7 @@
 layout: page
 title: "内部资料"
 description: "胜利一中模拟联合国协会"
-header-img: "img/slyzmun_header_img.png"
+header-img: "img/slyzmun_header_img.webp"
 ---
 
 <!-- Language Selector -->
