--- a/1-resources.html
+++ b/1-resources.html
@@ -19,15 +19,21 @@ header-img: "img/slyzmun_header_img.webp"
     <p>这里是胜利一中模拟联合国协会的相关资料（持续更新中，请常来看看）</p>
 
     <p></p>
-        
-<h3 id="toc_0">2023DYMUN夏季会议通告</h3>
+
+<h3 id="toc_0">团委材料</h3>
+<ul>
+<li><a href="{{site.baseurl}}/files/团委材料/胜利一中社团活动申请表.docx">胜利一中社团活动申请表</a></li>
+<li><a href="{{site.baseurl}}/files/团委材料/胜利一中社团活动记录表.docx">胜利一中社团活动记录表</a></li>
+</ul>
+    
+<h3 id="toc_1">2023DYMUN夏季会议通告</h3>
 <ul>
 <li><a href="{{site.baseurl}}/files/2023DYMUN夏季会议通告/2023DYMUN夏季会议第零轮通告.pdf">2023DYMUN夏季会议第零轮通告</a></li>
 <li><a href="{{site.baseurl}}/files/2023DYMUN夏季会议通告/2023DYMUN夏季会议第一轮通告.pdf">2023DYMUN夏季会议第一轮通告</a></li>
 <li><a href="{{site.baseurl}}/files/2023DYMUN夏季会议通告/2023DYMUN夏季会议第二轮通告.pdf">2023DYMUN夏季会议第二轮通告</a></li>
 </ul>
 
-<h3 id="toc_1">网站项目仓库</h3>
+<h3 id="toc_2">网站项目仓库</h3>
 <ul>
 <li>GitHub：<a href="https://github.com/slyzmun/slyzmun.github.io/">slyzmun.github.io</a></li>
 </ul>
