--- a/1-resources.html
+++ b/1-resources.html
@@ -33,7 +33,7 @@ header-img: "img/slyzmun_header_img.webp"
 <li><a href="{{site.baseurl}}/files/2023DYMUN夏季会议通告/2023DYMUN夏季会议第二轮通告.pdf">2023DYMUN夏季会议第二轮通告</a></li>
 </ul>
 
-<h3 id="toc_2">网站项目仓库</h3>
+<h3 id="toc_2">项目代码仓库</h3>
 <ul>
 <li>GitHub：<a href="https://github.com/slyzmun/slyzmun.github.io/">slyzmun.github.io</a></li>
 </ul>
