--- a/2-tags.html
+++ b/2-tags.html
@@ -68,3 +68,17 @@ header-img: "img/slyzmun_header_img.webp"
 		</div>
 	</div>
 </div>
+
+
+
+
+<hr>
+
+<small> <font color="a0a9a9">
+<b>版权声明：</b>
+<li>胜利一中模拟联合国协会拥有协会内一切活动资料、文件、成果等的版权，未经协会书面授权，任何单位或个人不得擅自复制、传播、修改、使用或用于其他商业用途。</li>
+<li>凡与胜利一中模拟联合国协会相关的原创内容，包括但不限于模拟会议流程设计、学术资料编写、宣传文案及视觉设计等，其版权均归胜利一中模拟联合国协会所有，侵权必究。</li>
+</font>
+<small>
+        
+</div>
