--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@ layout: page
 description: "从胜利出发，与世界对话"
 ---
 
-<!-- 顶部滚动字条 -->
+<!-- 首页顶部滚动字条样式开始 -->
+    <style>
+@keyframes marquee {
+    0% { transform: translateX(180%); }
+    100% { transform: translateX(-100%); }
+}
+</style>
+<!-- 首页顶部滚动字条样式结束 -->
+
+
+<!-- 顶部滚动字条内容开始 -->
 {% if site.top-scroll-bar-control | default: true %}
 <div style="position: relative; overflow: hidden!important; background: #1691cd!important; padding: 3px 0!important;">
     <div style="display: inline-block!important; animation: marquee 15s linear infinite!important; white-space: nowrap!important; font-size: 12px!important; color: white!important; font-weight: 400!important;">
@@ -11,6 +21,8 @@ description: "从胜利出发，与世界对话"
     </div>
 </div>
 {% endif %}
+<!-- 顶部滚动字条内容结束 -->
+
 
 <!--以下是功能栏，删除
 <ul class="pager">
