--- a/5-feedback.html
+++ b/5-feedback.html
@@ -23,7 +23,7 @@ header-img: "img/slyzmun_header_img.webp"
   
 <h3 id="toc_0">意见反馈</h3>
 <ul>
-<li><a href="{{site.baseurl}}/files/#">文件名</a></li>
+<li><a href="{{site.baseurl}}/files/#">意见反馈地址</a></li>
 </ul>
 
   
@@ -31,9 +31,9 @@ header-img: "img/slyzmun_header_img.webp"
 <hr>
 
 <small> <font color="a0a9a9">
-<b>版权声明：</b>
-<li>胜利一中模拟联合国协会拥有协会内一切活动资料、文件、成果等的版权，未经协会书面授权，任何单位或个人不得擅自复制、传播、修改、使用或用于其他商业用途。</li>
-<li>凡与胜利一中模拟联合国协会相关的原创内容，包括但不限于模拟会议流程设计、学术资料编写、宣传文案及视觉设计等，其版权均归胜利一中模拟联合国协会所有，侵权必究。</li>
+<b>功能说明：</b>
+<li>意见反馈功能当前不可用，</li>
+<li>请耐心等待网站管理员配置完成。</li>
 </font>
 <small>
         
