--- a/5-feedback.html
+++ b/5-feedback.html
@@ -20,7 +20,18 @@ header-img: "img/slyzmun_header_img.webp"
 
     <p></p>
 
-  
+<!--测试模块开始 -->
+     <form action="https://formspree.io/slyzmun@outlook.com" method="post">
+                    <input type="text" placeholder="您的姓名" name="name">
+                    <input type="email" placeholder="您的邮箱" name="eamil">
+                    <textarea name="message" id="doc-vld-ta-2-1" minlength="10"  placeholder="请输入您的留言"></textarea>
+                    <div class="banner_btn pa">
+                        <button style="line-height: 41px;" type="submit">发送信息</button>
+                    </div>
+   </form>
+<!--测试模块结束 -->
+
+    
 <h3 id="toc_0">意见反馈</h3>
 <ul>
 <li><a href="{{site.baseurl}}/files/#">意见反馈地址</a></li>
