--- a/5-feedback.html
+++ b/5-feedback.html
@@ -20,10 +20,8 @@ header-img: "img/slyzmun_header_img.webp"
 
 <hr>
 
-
-
-<script src="https://jsj.top/f/r5TJ9h/embedded.js?inner_redirect=false&banner=show&background=white&height=797"></script>
-
+    <!--金数据表单script嵌入 -->
+<script src="https://jsj.top/f/r5TJ9h/embedded.js?background=white&banner=show&inner_redirect=false"></script>
 
   
 <small> <font color="a0a9a9">
