--- a/5-feedback.html
+++ b/5-feedback.html
@@ -16,18 +16,14 @@ header-img: "img/slyzmun_header_img.webp"
 
     <!--copied from markdown -->
 
-    <p>这里是意见反馈页面，可以向我们反馈您的任何意见</p>
-
-<hr>
-
     <!--金数据表单script嵌入 -->
 <script src="https://jsj.top/f/r5TJ9h/embedded.js?background=white&banner=show&inner_redirect=false"></script>
 
   
 <small> <font color="a0a9a9">
-<b>版权声明：</b>
-<li>胜利一中模拟联合国协会拥有协会内一切活动资料、文件、成果等的版权，未经协会书面授权，任何单位或个人不得擅自复制、传播、修改、使用或用于其他商业用途。</li>
-<li>凡与胜利一中模拟联合国协会相关的原创内容，包括但不限于模拟会议流程设计、学术资料编写、宣传文案及视觉设计等，其版权均归胜利一中模拟联合国协会所有，侵权必究。</li>
+<b>免责声明：</b>
+<li>本意见反馈模块由金数据提供技术支持，特此感谢！ </li>
+<li>本站不对表单页面中出现的第三方广告真实性负责，相关责任由广告发布方承担。</li>
 </font>
 <small>
         
