--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@ description: "从胜利出发，与世界对话"
 
 <!-- 顶部滚动字条内容开始 -->
 {% if site.top-scroll-bar-control | default: true %}
-<div style="position: relative; overflow: hidden!important; background: #1691cd!important; padding: 3px 0!important;">
-    <div style="display: inline-block!important; animation: marquee 15s linear infinite!important; white-space: nowrap!important; font-size: 12px!important; color: white!important; font-weight: 400!important; margin-top: 10px!important; ">
+<div style="position: relative; overflow: hidden!important; background: #1691cd!important; padding: 3px 0!important; margin-top: 10px!important;">
+    <div style="display: inline-block!important; animation: marquee 15s linear infinite!important; white-space: nowrap!important; font-size: 12px!important; color: white!important; font-weight: 400!important; ">
         {{ site.top-scroll-bar }}
     </div>
 </div>
