--- a/4-feedback.html
+++ b/4-feedback.html
@@ -22,7 +22,7 @@ header-img: "img/slyzmun_header_img.webp"
   
 <small> <font color="a0a9a9">
 <b>免责声明：</b>
-<li>本意见反馈模块由金数据提供技术支持，特此感谢！ </li>
+<li>本页面意见反馈模块由金数据提供技术支持，特此感谢！ </li>
 <li>本站不对表单页面中出现的第三方广告真实性负责，相关责任由广告发布方承担。</li>
 </font>
 <small>
