--- a/index.html
+++ b/index.html
@@ -3,25 +3,37 @@ layout: page
 description: "从胜利出发，与世界对话"
 ---
 
+
 <!-- 首页顶部滚动字条样式开始 -->
-    <style>
+<style>
 @keyframes marquee {
     0% { transform: translateX(150%); }
     100% { transform: translateX(-100%); }
 }
+.scrolling-text {
+    display: inline-block!important;
+    animation: marquee 15s linear infinite!important;
+    white-space: nowrap!important;
+    font-size: 12px!important;
+    color: white!important;
+    font-weight: 400!important;
+}
+.scrolling-text:hover {
+    animation-play-state: paused;
+}
 </style>
 <!-- 首页顶部滚动字条样式结束 -->
-
 
 <!-- 顶部滚动字条内容开始 -->
 {% if site.top-scroll-bar-control | default: true %}
 <div style="position: relative; overflow: hidden!important; background: #1691cd!important; padding: 3px 0!important; margin-top: 10px!important;">
-    <div style="display: inline-block!important; animation: marquee 15s linear infinite!important; white-space: nowrap!important; font-size: 12px!important; color: white!important; font-weight: 400!important; ">
+    <div class="scrolling-text">
         {{ site.top-scroll-bar }}
     </div>
 </div>
 {% endif %}
-<!-- 顶部滚动字条内容结束 -->
+<!-- 顶部滚动字条内容结束 -->    
+
 
 
 <!--以下是功能栏，删除
