--- a/2-files.html
+++ b/2-files.html
@@ -26,14 +26,19 @@ header-img: "img/slyzmun_header_img.webp"
 <li><a href="{{site.baseurl}}/files/团委材料/胜利一中社团活动记录表.docx">胜利一中社团活动记录表</a></li>
 </ul>
     
-<h3 id="toc_1">2023DYMUN夏季会议通告</h3>
+<h3 id="toc_1">DYMUN会议通告</h3>
 <ul>
 <li><a href="{{site.baseurl}}/files/2023DYMUN夏季会议通告/2023DYMUN夏季会议第零轮通告.pdf">2023DYMUN夏季会议第零轮通告</a></li>
 <li><a href="{{site.baseurl}}/files/2023DYMUN夏季会议通告/2023DYMUN夏季会议第一轮通告.pdf">2023DYMUN夏季会议第一轮通告</a></li>
 <li><a href="{{site.baseurl}}/files/2023DYMUN夏季会议通告/2023DYMUN夏季会议第二轮通告.pdf">2023DYMUN夏季会议第二轮通告</a></li>
 </ul>
 
-<h3 id="toc_2">项目代码仓库</h3>
+<h3 id="toc_2">学术标准手册</h3>
+<ul>
+<li><a href="{{site.baseurl}}/files/学术标准手册/PKUNMUN2023学术标准手册（修订版）.pdf">PKUNMUN2023学术标准手册（修订版）</a></li>
+</ul>
+    
+<h3 id="toc_3">项目代码仓库</h3>
 <ul>
 <li>GitHub：<a href="https://github.com/slyzmun/slyzmun.github.io/">slyzmun.github.io</a></li>
 </ul>
