--- a/index.html
+++ b/index.html
@@ -21,81 +21,81 @@ description: "从胜利出发，与世界对话"
 
         /* 弹窗遮罩层 */
     .privacy-mask {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba(0,0,0,0.5);
-        z-index: 9999;
-        display: none;
-        justify-content: center;
-        align-items: center;
+        position: fixed !important;
+        top: 0 !important;
+        left: 0 !important;
+        width: 100% !important;
+        height: 100% !important;
+        background: rgba(0,0,0,0.5) !important;
+        z-index: 9999 !important;
+        display: none !important;
+        justify-content: center !important;
+        align-items: center !important;
     }
 
     /* 协议容器 */
     .privacy-modal {
-        background: white;
-        width: 90%;
-        max-width: 800px;
-        max-height: 80vh;
-        border-radius: 8px;
-        box-shadow: 0 4px 20px rgba(0,0,0,0.2);
-        padding: 30px;
-        display: flex;
-        flex-direction: column;
+        background: white !important;
+        width: 90% !important;
+        max-width: 800px !important;
+        max-height: 80vh !important;
+        border-radius: 8px !important;
+        box-shadow: 0 4px 20px rgba(0,0,0,0.2) !important;
+        padding: 30px !important;
+        display: flex !important;
+        flex-direction: column !important;
     }
 
     /* 协议标题 */
     .privacy-title {
-        font-size: 24px;
-        font-weight: 600;
-        color: #333;
-        margin-bottom: 20px;
-        border-bottom: 2px solid #eee;
-        padding-bottom: 10px;
+        font-size: 24px !important;
+        font-weight: 600 !important;
+        color: #333 !important;
+        margin-bottom: 20px !important;
+        border-bottom: 2px solid #eee !important;
+        padding-bottom: 10px !important;
     }
 
     /* 协议内容 */
     .privacy-content {
-        flex: 1;
-        overflow-y: auto;
-        font-size: 14px;
-        line-height: 1.6;
-        color: #666;
-        margin-bottom: 20px;
+        flex: 1 !important;
+        overflow-y: auto !important;
+        font-size: 14px !important;
+        line-height: 1.6 !important;
+        color: #666 !important;
+        margin-bottom: 20px !important;
     }
 
     /* 确认按钮 */
     #privacy-confirm {
-        align-self: center;
-        background: #1691cd;
-        color: white;
-        border: none;
-        padding: 12px 40px;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        transition: background 0.3s;
+        align-self: center !important;
+        background: #1691cd !important;
+        color: white !important;
+        border: none !important;
+        padding: 12px 40px !important;
+        border-radius: 5px !important;
+        cursor: pointer !important;
+        font-size: 16px !important;
+        transition: background 0.3s !important;
     }
 
     #privacy-confirm:disabled {
-        background: #cccccc;
-        cursor: not-allowed;
+        background: #cccccc !important;
+        cursor: not-allowed !important;
     }
 
     /* 提示信息 */
     .privacy-alert {
-        position: fixed;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        background: rgba(0,0,0,0.8);
-        color: white;
-        padding: 10px 20px;
-        border-radius: 5px;
-        z-index: 10000;
-        display: none;
+        position: fixed !important;
+        top: 50% !important;
+        left: 50% !important;
+        transform: translate(-50%, -50%) !important;
+        background: rgba(0,0,0,0.8) !important;
+        color: white !important;
+        padding: 10px 20px !important;
+        border-radius: 5px !important;
+        z-index: 10000 !important;
+        display: none !important;
     }
     
 </style>
