--- a/index.html
+++ b/index.html
@@ -18,102 +18,8 @@ description: "从胜利出发，与世界对话"
         font-weight: 400;
         animation: marquee 15s linear infinite;
     }
-
-        /* 弹窗遮罩层 */
-    .privacy-mask {
-        position: fixed !important;
-        top: 0 !important;
-        left: 0 !important;
-        width: 100% !important;
-        height: 100% !important;
-        background: rgba(0,0,0,0.5) !important;
-        z-index: 9999 !important;
-        display: none !important;
-        justify-content: center !important;
-        align-items: center !important;
-    }
-
-    /* 协议容器 */
-    .privacy-modal {
-        background: white !important;
-        width: 90% !important;
-        max-width: 800px !important;
-        max-height: 80vh !important;
-        border-radius: 8px !important;
-        box-shadow: 0 4px 20px rgba(0,0,0,0.2) !important;
-        padding: 30px !important;
-        display: flex !important;
-        flex-direction: column !important;
-    }
-
-    /* 协议标题 */
-    .privacy-title {
-        font-size: 24px !important;
-        font-weight: 600 !important;
-        color: #333 !important;
-        margin-bottom: 20px !important;
-        border-bottom: 2px solid #eee !important;
-        padding-bottom: 10px !important;
-    }
-
-    /* 协议内容 */
-    .privacy-content {
-        flex: 1 !important;
-        overflow-y: auto !important;
-        font-size: 14px !important;
-        line-height: 1.6 !important;
-        color: #666 !important;
-        margin-bottom: 20px !important;
-    }
-
-    /* 确认按钮 */
-    #privacy-confirm {
-        align-self: center !important;
-        background: #1691cd !important;
-        color: white !important;
-        border: none !important;
-        padding: 12px 40px !important;
-        border-radius: 5px !important;
-        cursor: pointer !important;
-        font-size: 16px !important;
-        transition: background 0.3s !important;
-    }
-
-    #privacy-confirm:disabled {
-        background: #cccccc !important;
-        cursor: not-allowed !important;
-    }
-
-    /* 提示信息 */
-    .privacy-alert {
-        position: fixed !important;
-        top: 50% !important;
-        left: 50% !important;
-        transform: translate(-50%, -50%) !important;
-        background: rgba(0,0,0,0.8) !important;
-        color: white !important;
-        padding: 10px 20px !important;
-        border-radius: 5px !important;
-        z-index: 10000 !important;
-        display: none !important;
-    }
-    
 </style>
-
-<!-- 用户协议弹窗结构 -->
-<div class="privacy-mask" id="privacyMask">
-    <div class="privacy-modal">
-        <h2 class="privacy-title">胜利一中模拟联合国协会网站隐私协议</h2>
-        <div class="privacy-content" id="privacyContent">
-            <!-- 协议内容（引用md） -->
-                <div id="xieyi"></div>
-        </div>
-        <button id="privacy-confirm" disabled>同意并继续</button>
-    </div>
-</div>
-
-<!-- 提示信息容器 -->
-<div class="privacy-alert" id="privacyAlert"></div>
+<!-- 首页顶部滚动字条样式结束 -->
 
 <!-- 顶部滚动字条内容开始 -->
 {% if site.top-scroll-bar-control | default: true %}
@@ -136,78 +42,7 @@ description: "从胜利出发，与世界对话"
     });
 </script>    
 
-<!-- 获取用户协议文件 -->
-<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-   <script>
-        const xieyi = document.getElementById('xieyi');
 
-        fetch('/xieyi.md')
-          .then(response => {
-                if (!response.ok) {
-                    throw new Error('网络请求失败');
-                }
-                return response.text();
-            })
-          .then(data => {
-                const html = marked(data);
-                xieyi.innerHTML = html;
-            })
-          .catch(error => {
-                console.error('获取文件时出错:', error);
-            });
-    </script>
-
-<!-- 用户协议弹窗脚本 -->
-<script>
-    // 显示提示信息
-    function showAlert(message) {
-        const alert = document.getElementById('privacyAlert');
-        alert.textContent = message;
-        alert.style.display = 'block';
-        setTimeout(() => {
-            alert.style.display = 'none';
-        }, 2000);
-    }
-
-    // 初始化弹窗
-    document.addEventListener('DOMContentLoaded', () => {
-        if (!localStorage.getItem('privacyAgreed')) {
-            const mask = document.getElementById('privacyMask');
-            const content = document.getElementById('privacyContent');
-            const confirmBtn = document.getElementById('privacy-confirm');
-
-            // 显示弹窗
-            mask.style.display = 'flex';
-
-            // 滚动检测
-            content.addEventListener('scroll', () => {
-                const isBottom = content.scrollHeight - content.scrollTop === content.clientHeight;
-                confirmBtn.disabled = !isBottom;
-            });
-
-            // 确认按钮点击
-            confirmBtn.addEventListener('click', () => {
-                localStorage.setItem('privacyAgreed', 'true');
-                mask.style.display = 'none';
-            });
-
-            // 遮罩层点击
-            mask.addEventListener('click', (e) => {
-                if (e.target === mask) {
-                    showAlert('请阅读完整协议内容');
-                }
-            });
-
-            // 按钮禁用时点击
-            confirmBtn.addEventListener('click', function(e) {
-                if (this.disabled) {
-                    showAlert('请滚动阅读完整协议');
-                    e.preventDefault();
-                }
-            });
-        }
-    });
-</script>
 
 <!--以下是功能栏，删除
 <ul class="pager">
