--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ description: "从胜利出发，与世界对话"
 <style>
 .floating-ad {
   position: fixed;
-  width: 300px;  /* 3:4比例 */
-  height: 400px;
+  width: 30px;  
+  height: 40px;
   background: #1691cd;
   border-radius: 8px;
   color: white;
