--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@ description: "从胜利出发，与世界对话"
 
 <!-- 广告飘窗HTML结构 -->
 {% if site.floating-window-control %}
-<div class="window-control" id="windowToggle">
-    ×
-</div>
+<div class="window-control" id="windowToggle">关闭</div>
 <div class="floating-window" id="floatingWindow">
     {{ site.floating-window-content }}
 </div>
