--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ description: "从胜利出发，与世界对话"
     .floating-ad {
         position: fixed;
         left: 0;
-        width: 120px;
-        height: 90px;
+        width: 3vw;
+        height: 2vh;
         background: #1691cd;
         border-radius: 0 10px 10px 0;
         z-index: 9999;
@@ -61,6 +61,7 @@ description: "从胜利出发，与世界对话"
         width: 100%;
         height: 100%;
         object-fit: cover;
+        cursor: pointer;
     }
     .floating-content {
         color: white;
