--- a/3-about.html
+++ b/3-about.html
@@ -16,7 +16,7 @@ header-img: "img/slyzmun_header_img.webp"
 
     <!--copied from markdown -->
 
-    <p>这里是<strong>胜利一中模拟联合国协会</strong>，隶属于东营市胜利第一中学社团阵地，秉持着对多元文化交流与国际事务探讨的热忱而成立。</p>
+    <p>这里是<strong>胜利一中模拟联合国协会</strong>，隶属于东营市胜利第一中学社团阵地，秉持着对多元文化交流与国际事务探讨的热忱，于2013年9月26日正式成立。</p>
 
     <p>协会以模拟联合国会议为主要活动形式，引导成员模拟各国外交官角色，在会议中围绕全球性议题展开深入辩论与磋商。</p>
     
