--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ description: "从胜利出发，与世界对话"
         overflow: hidden;
         cursor: pointer;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s linear;
     }
     .floating-ad img {
         width: 100%;
