--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ description: "从胜利出发，与世界对话"
   
     <li class="next">
         <a href="/dymun" data-toggle="tooltip" data-placement="top" title="DYMUN报名通道">
-                        点击进入<br>
+                        DYMUN报名通道 >>点击进入<br>
         </a>
     </li>           
                     
