--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ description: "从胜利出发，与世界对话"
   
     <li class="next">
         <a href="/dymun" data-toggle="tooltip" data-placement="top" title="DYMUN报名通道">
-                        >>DYMUN东营市中学生模拟联合国协会2025年度夏季会议报名通道<br>
+                        >> DYMUN东营市中学生模拟联合国协会2025年度夏季会议【报名通道】<br>
         </a></li>           
                     
 </ul><hr>
