--- a/1-articles.html
+++ b/1-articles.html
@@ -1,8 +1,8 @@
 ---
 title: 最新动态
 layout: default
-description: "胜利一中模拟联合国协会"
-header-img: "img/slyzmun_header_img.webp"
+description: "Ethankent"
+header-img: "img/header_img.webp"
 ---
 
 <!-- Page Header -->
