--- a/2-files.html
+++ b/2-files.html
@@ -1,8 +1,8 @@
 ---
 layout: page
-title: "内部资料"
-description: "胜利一中模拟联合国协会"
-header-img: "img/slyzmun_header_img.webp"
+title: "精选资源"
+description: "EthanKent"
+header-img: "img/header_img.webp"
 ---
 
 <!-- Language Selector -->
