--- a/1-articles.html
+++ b/1-articles.html
@@ -1,8 +1,8 @@
 ---
-title: 最新动态
+title: 博客文章
 layout: default
-description: "Ethankent"
-header-img: "img/header_img.webp"
+description: "EthanKent"
+header-img: "img/main/header_img.webp"
 ---
 
 <!-- Page Header -->
