--- a/2-files.html
+++ b/2-files.html
@@ -2,7 +2,7 @@
 layout: page
 title: "精选资源"
 description: "EthanKent"
-header-img: "img/header_img.webp"
+header-img: "img/main/header_img.webp"
 ---
 
 <!-- Language Selector -->
