--- a/3-about.html
+++ b/3-about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "与我联系"
 description: "EthanKent"
-header-img: "img/slyzmun_header_img.webp"
+header-img: "img/main/header_img.webp"
 ---
 
 <!-- Language Selector -->
