--- a/offline.html
+++ b/offline.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: "网络似乎出现了问题 😥"
-header-img: "img/slyzmun_header_img.webp"
+header-img: "img/main/header_img.webp"
 permalink: /offline.html
 ---
 
