--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: "你来到了没有知识的荒原"
-header-img: "img/slyzmun_header_img.webp"
+header-img: "img/main/header_img.webp"
 permalink: /404.html
 ---
 
